# YAT

./: .gitignore  LICENSE  README.en.md  README.md  capsule.html  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  debug-package.yml  release.yml
docs/: product-review.md
src/: App.tsx  CapsuleApp.tsx  app.css  capsule-main.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_utils.rs  audio.rs  config.rs  context.rs  history.rs  hotkey.rs  lib.rs  llm.rs  main.rs  output.rs  permissions.rs  pipeline.rs  recording_env.rs  stt.rs  volume.rs
src/components/: Settings.tsx
src/components/settings/: GeneralTab.tsx  HistoryTab.tsx  LlmTab.tsx  OverviewTab.tsx  PromptTab.tsx  SettingPrimitives.tsx  SttTab.tsx  VocabularyTab.tsx  icons.tsx  tabs.ts
src/components/ui/: ConfirmDialog.tsx  Toast.tsx  Toggle.tsx  Tooltip.tsx
src/lib/: defaultSettings.ts  i18n.ts  settingsFormatters.ts  settingsTransfer.ts  sounds.ts  tauriRuntime.ts
src/locales/: en.json  zh-TW.json
src/stores/: appStore.ts  historyStore.ts  recordingStore.ts  settingsStore.ts
