[package]
name = "YAT"
version = "0.1.0"
description = "Yet Another Typeless – AI voice-to-text input tool"
authors = ["you"]
edition = "2021"

[lib]
name = "yat_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "2"
parking_lot = "0.12"
tokio = { version = "1", features = ["time"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Audio capture & encoding
cpal = "0.15"
hound = "3.5"

# HTTP client for STT/LLM API calls
reqwest = { version = "0.12", features = ["multipart", "json"] }
bytes = "1"

# Clipboard & keyboard simulation
arboard = "3"
enigo = "0.2"

# Global keyboard hook (for single-key hotkeys like Alt)
rdev = { version = "0.5", features = ["unstable_grab"] }

# Local history database
rusqlite = { version = "0.32", features = ["bundled"] }

# System volume control (Windows)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
] }
