[package]
name = "YAT"
version = "0.1.0"
description = "Yet Another Typeless – AI voice-to-text input tool"
authors = ["you"]
edition = "2021"

[lib]
name = "yat_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "2"
parking_lot = "0.12"
tokio = { version = "1", features = ["time"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Audio capture & encoding
cpal = "0.17"
hound = "3.5"

# HTTP client for STT/LLM API calls
reqwest = { version = "0.13", features = ["multipart", "json"] }
bytes = "1"

# Clipboard & keyboard simulation
arboard = { version = "3", features = ["wayland-data-control"] }
enigo = "0.6"

# Context capture: active window detection & native selected text
active-win-pos-rs = "0.10"
get-selected-text = "0.1"

# Screen capture for visual context
xcap = "0.9"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }

# Global keyboard hook (for single-key hotkeys like Alt)
rdev = { version = "0.5", features = ["unstable_grab"] }

# Local history database
rusqlite = { version = "0.39", features = ["bundled"] }

# OS credential store for API keys
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# X11 PRIMARY selection for clipboard-free selected text reading on Linux
[target.'cfg(target_os = "linux")'.dependencies]
x11-clipboard = "0.9"

# Typed Objective-C message passing (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
block2 = "0.6"

# System volume control & UI Automation (Windows only)
[target.'cfg(windows)'.dependencies]
# UI Automation for reading focused input field text
uiautomation = "0.24"
# Registry access for microphone consent store check
winreg = "0.56"
windows = { version = "0.62", features = [
    "Foundation",
    "Foundation_Collections",
    "Media_Control",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
] }
